--- a/pre-registration/pre-registration-demographic-service/src/main/resources/bootstrap.properties
+++ b/pre-registration/pre-registration-demographic-service/src/main/resources/bootstrap.properties
@@ -14,3 +14,7 @@ server.port=9092
 # 5 minutes (should not be done in production)
 health.config.enabled=false
 
+mosip.preregistration.demographic.id.create=mosip.pre-registration.demographic.create
+mosip.preregistration.demographic.id.update=mosip.pre-registration.demographic.update
+mosip.preregistration.demographic.id.retrieve.date=mosip.pre-registration.demographic.retrieve.date
+
