--- a/pre-registration/pre-registration-demographic-service/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-demographic-service/src/test/resources/application.properties
@@ -185,3 +185,99 @@ mosip.kernel.crypto.hash-symmetric-key-length=256
 mosip.kernel.crypto.hash-iteration=100000
 #Sign algo name
 mosip.kernel.crypto.sign-algorithm-name=SHA512withRSA
+mosip.preregistration.demographic.id.create=mosip.pre-registration.demographic.create
+mosip.preregistration.demographic.id.update=mosip.pre-registration.demographic.update
+mosip.preregistration.demographic.id.update.status=mosip.pre-registration.demographic.status.update
+mosip.preregistration.demographic.id.retrieve.basic=mosip.pre-registration.demographic.retrieve.basic
+mosip.preregistration.demographic.id.retrieve.details=mosip.pre-registration.demographic.retrieve.details
+mosip.preregistration.demographic.id.retrieve.status=mosip.pre-registration.demographic.retrieve.status
+mosip.preregistration.demographic.id.retrieve.date=mosip.pre-registration.demographic.retrieve.date
+mosip.preregistration.demographic.id.delete=mosip.pre-registration.demographic.delete
+
+mosip.batch.token.authmanager.url= https://dev.mosip.io/v1/authmanager/authenticate/useridPwd
+mosip.batch.token.authmanager.appId=ida 
+mosip.batch.token.authmanager.userName=110005 
+mosip.batch.token.authmanager.password=mosip
+mosip.batch.token.request.id=mosip.io.doc.id
+
+mosip.kernel.virus-scanner.host=104.211.200.46
+mosip.kernel.virus-scanner.port=3310
+
+auth.server.validate.url=https://dev.mosip.io/authmanager/v1.0/authorize/validateToken
+
+version=1.0
+
+# Name node url for HDFS
+mosip.kernel.fsadapter.hdfs.name-node-url=hdfs://104.211.240.243:51000
+
+# Key Distribution Center domain for Kerberos
+mosip.kernel.fsadapter.hdfs.kdc-domain=NODE-MASTER.SOUTHINDIA.CLOUDAPP.AZURE.COM
+
+# Username to access hdfs. Change this to application username (regprocessor,prereg or idrepo)
+mosip.kernel.fsadapter.hdfs.user-name=prereg
+
+# Password for hdfs user
+mosip.kernel.fsadapter.hdfs.user-pass=Mosip@dev123
+
+# HDFS log level. Change this to debug to see hdfs logs
+logging.level.org.apache.hadoop=warn
+
+demographic.service.version=v0.1
+demographic.service.env=demographic
+swagger.dns.url=http://localhost
+dev.dns.url=https://dev.mosip.io
+demographic.resource.url=${swagger.dns.url}:9092/pre-registration/${demographic.service.version}/${demographic.service.env}
+notificationUtil=
+
+
+#Pre-registration Id length
+prereg_id.length=16
+
+#Kernel Service URL for Encryption and decryption
+cryptoResource.url=${dev.dns.url}/cryptomanager/v1.0
+
+#Kernel service URL for Audit logging
+audit.url=${dev.dns.url}/auditmanager/v1.0/audits
+
+#Kernel service URL for fetching templates
+resource.template.url=${dev.dns.url}/masterdata/v1.0/templates
+
+#Kernel service URL for sending emails
+emailResourse.url=${dev.dns.url}/emailnotifier/v1.0/email/send
+
+#Kernel service URL for sending sms
+smsResourse.url=${dev.dns.url}/smsnotifier/v1.0/sms/send
+# UTC ISO Date Time Pattern
+mosip.utc-datetime-pattern=yyyy-MM-dd'T'HH:mm:ss.SSS'Z'
+
+email.acknowledgement.template=Email-Acknowledgement
+email.acknowledgement.subject.template=Acknowledgement-email-subject
+sms.acknowledgement.template=SMS-Acknowledgement
+
+preregistration.preid.regex=[0-9]+
+
+mosip.kernel.prid.length=14
+
+mosip.id.validation.identity.email=^[\\w-\\+]+(\\.[\\w]+)*@[\\w-]+(\\.[\\w]+)*(\\.[a-z]{2,})$
+
+mosip.id.validation.identity.phone=^([6-9]{1})([0-9]{9})$
+
+mosip.kernel.masterdata.validdoc.rest.uri=https://dev.mosip.io/masterdata/validdocuments/
+
+auth.server.validate.url=https://dev.mosip.io/authmanager/v1.0/authorize/validateToken 
+mosip.preregistration.document.scan=true
+
+mosip.primary-language=eng
+mosip.preregistration.document.upload.id=mosip.pre-registration.document.upload
+mosip.preregistration.document.copy.id=mosip.pre-registration.document.copy
+mosip.preregistration.document.fetch.metadata.id=mosip.pre-registration.document.fetch.metadata
+mosip.preregistration.document.fetch.content.id=mosip.pre-registration.document.fetch.content
+mosip.preregistration.document.delete.id=mosip.pre-registration.document.delete
+mosip.preregistration.document.delete.specific.id=mosip.pre-registration.document.delete.specific
+mosip.kernel.idobjectvalidator.masterdata.documentcategories.lang.rest.uri=https://dev.mosip.io/v1/masterdata/documentcategories/{langcode}
+mosip.kernel.idobjectvalidator.masterdata.documenttypes.rest.uri=https://dev.mosip.io/v1/masterdata/documenttypes/{documentcategorycode}/{langcode}
+max.file.size=5
+preregistration.document.extention=pdf
+
+mosip.kernel.virus-scanner.host=104.211.200.46
+mosip.kernel.virus-scanner.port=3310
