--- a/pre-registration/pre-registration-login-service/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-login-service/src/test/resources/application.properties
@@ -32,7 +32,7 @@ sms.acknowledgement.template=SMS-Acknowledgement
 mosip.utc-datetime-pattern= "yyyy-MM-dd'T'HH:mm:ss.SSS'Z'"
  
 
-service.version=v1.0
+service.version=v1
 master.service.env=masterdata
 
 int.dns.url=http://localhost:8086
@@ -45,19 +45,19 @@ dev.dns.url=https://dev.mosip.io
 prereg_id.length=16
 
 #Kernel Service URL for Encryption and decryption
-cryptoResource.url=${dev.dns.url}/cryptomanager/v1.0
+cryptoResource.url=${dev.dns.url}/cryptomanager/v1
 
 #Kernel service URL for Audit logging
-audit.url=${dev.dns.url}/auditmanager/v1.0/audits
+audit.url=${dev.dns.url}/auditmanager/v1/audits
 
 #Kernel service URL for fetching templates
-resource.template.url=${dev.dns.url}/masterdata/v1.0/templates
+resource.template.url=${dev.dns.url}/masterdata/v1/templates
 
 #Kernel service URL for sending emails
-emailResourse.url=${dev.dns.url}/emailnotifier/v1.0/email/send
+emailResourse.url=${dev.dns.url}/emailnotifier/v1/email/send
 
 #Kernel service URL for sending sms
-smsResourse.url=${dev.dns.url}/smsnotifier/v1.0/sms/send
+smsResourse.url=${dev.dns.url}/smsnotifier/v1/sms/send
 
 timeSpanCheckForRebook=24
 timeSpanCheckForCancel=24
@@ -89,7 +89,7 @@ spring.application.name=pre-registration-login-service
 spring.profiles.active=dev
 management.endpoints.web.exposure.include=refresh
 
-auth.server.validate.url=https://qa.mosip.io/authmanager/v1.0/authorize/validateToken 
+auth.server.validate.url=https://qa.mosip.io/authmanager/v1/authorize/validateToken 
 ui.config.params=preregistration.login.mode,preregistration.workflow.demographic,preregistration.workflow.documentupload,preregistration.workflow.booking,preregistration.booking.offset,preregistration.auto.logout,preregistration.rebook.timespan,preregistration.cancel.timespan,preregistration.book.days,preregistration.max.file.size,preregistration.recommended.centers.locCode,preregistration.nearby.centers,mosip.regex.email,mosip.regex.postalCode,mosip.regex.textField,mosip.regex.phone,mosip.regex.DOB,mosip.regex.CNIE,mosip.supported-languages,mosip.primary-language,mosip.secondary-language,mosip.default.dob,mosip.kernel.otp.expiry-time,mosip.kernel.otp.validation-attempt-threshold,mosip.kernel.otp.default-length,mosip.kernel.sms.number.length,mosip.kernel.pin.length
 
 mosip.id.validation.identity.dateOfBirth=
@@ -108,7 +108,7 @@ preregistration.preid.regex=
 auth.server.validate.url=
 mosip.preregistration.login.service.version=1.0
 
-server.servlet.context-path=/preregistration/v1.0/login
+server.servlet.context-path=/preregistration/v1/login
 
 
 
