--- a/pre-registration/pre-registration-notification-service/src/main/resources/bootstrap.properties
+++ b/pre-registration/pre-registration-notification-service/src/main/resources/bootstrap.properties
@@ -9,3 +9,4 @@ management.endpoints.web.exposure.include=info,health,refresh
 server.servlet.context-path=/preregistration/v1/notification
 
 server.port=9099
+mosip.pre-registration.notification.id.send=mosip.pre-registration.notification.notify
