--- a/pre-registration/pre-registration-document-service/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-document-service/src/test/resources/application.properties
@@ -104,3 +104,34 @@ mosip.batch.token.authmanager.appId=ida
 mosip.batch.token.authmanager.userName=110005 
 mosip.batch.token.authmanager.password=mosip
 mosip.batch.token.request.id=mosip.io.doc.id
+
+mosip.preregistration.document.id.upload=mosip.pre-registration.document.upload
+regCenter.url=http://localhost:8086/masterdata/v1.0/registrationcenters
+holiday.url=http://localhost:8086/masterdata/v1.0/getregistrationcenterholidays/
+mosip.supported-languages=eng,ara,fra
+mosip.primary-language=eng
+
+preregistration.country.specific.zoneId=GMT+05:30
+notification.url=https://dev-int.mosip.io/notification/notify
+mosip.kernel.prid.sequence-limit=3
+
+# Number of digits in repeating block allowed in id. For example if limit is 2,
+# then 4xxx4 is allowed but 48xxx48 is not allowed in id (x is any digit)
+#to disable validation assign zero or negative value
+mosip.kernel.prid.repeating-block-limit=3
+
+
+# Lower bound of number of digits allowed in between two repeating digits in
+# id. For example if limit is 2, then 11 and 1x1 is not allowed in id (x is any digit) to disable validation assign zero or negative value
+mosip.kernel.prid.repeating-limit=2
+
+# list of number that id should not be start with to disable null
+mosip.kernel.prid.not-start-with=0,1
+
+#restricted numbers for prid
+mosip.kernel.prid.restricted-numbers=786,666
+mosip.kernel.prid.sequence-limit=2
+preregistration.rebook.timespan = 24
+preregistration.cancel.timespan = 24
+preregistration.timespan.cancel=24
+preregistration.timespan.rebook=24
