--- a/pre-registration/pre-registration-notification-service/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-notification-service/src/test/resources/application.properties
@@ -76,3 +76,4 @@ mosip.kernel.idobjectvalidator.masterdata.documenttypes.rest.uri=https://dev.mos
 mosip.kernel.masterdata.validdoc.rest.uri==https://dev.mosip.io/masterdata/validdocuments/
 
 mosip.pre-registration.notification.id.notify=mosip.pre-registration.notification.notify
+mosip.notificationtype=sms|email
