--- a/pre-registration/pre-registration-translitration-service/src/main/resources/bootstrap.properties
+++ b/pre-registration/pre-registration-translitration-service/src/main/resources/bootstrap.properties
@@ -12,3 +12,4 @@ server.port=9098
 #disabling health check so that client doesnt try to load properties from sprint config server every
 # 5 minutes (should not be done in production)
 health.config.enabled=false
+mosip.pre-registration.transliteration.id.transliterate=mosip.pre-registration.transliteration.transliterate
