--- a/pre-registration/pre-registration-batchjob/src/main/resources/bootstrap.properties
+++ b/pre-registration/pre-registration-batchjob/src/main/resources/bootstrap.properties
@@ -10,3 +10,4 @@ management.endpoints.web.exposure.include=refresh
 health.config.enabled=false
 
 server.port=9097
+mosip.preregistration.batchjob.id.sync=mosip.preregistration.booking.availability.sync.id
