--- a/kernel/kernel-masterdata-service/src/main/resources/bootstrap.properties
+++ b/kernel/kernel-masterdata-service/src/main/resources/bootstrap.properties
@@ -22,6 +22,8 @@ javax.persistence.jdbc.url=${masterdata_database_url}
 javax.persistence.jdbc.user=${masterdata_database_username}
 javax.persistence.jdbc.password=${masterdata_database_password}
 
+master.search.maximum.rows=3
+
 #mosip.kernel.database.hostname=104.211.202.203
 #mosip.kernel.database.port=9001 
 
