--- a/resident/pom.xml
+++ b/resident/pom.xml
@@ -42,9 +42,6 @@
 		<swagger.annotations.version>1.5.20</swagger.annotations.version>
 		<springfox.version>2.9.2</springfox.version>
 
-		<vertx.version>3.6.2</vertx.version>
-		<vertx.health.check.version>3.7.0</vertx.health.check.version>
-
 
 		<!-- javax -->
 		<javax.interceptor.version>1.2</javax.interceptor.version>
@@ -115,6 +112,7 @@
 		<byte.buddy.version>1.9.12</byte.buddy.version>
 		<io.jsonwebtoken.jjwt.version>0.6.0</io.jsonwebtoken.jjwt.version>
 		<apache.directory.api.version>2.0.0.AM2</apache.directory.api.version>
+		<google.gson.version>2.8.4</google.gson.version>
 
 		<sonar.coverage.exclusions>**/constant/**,**/config/**,**/httpfilter/**,**/cache/**,**/dto/**,**/entity/**,**/model/**,**/exception/**,**/repository/**,**/security/**,**/*Config.java,**/*BootApplication.java,**/*VertxApplication.java,**/cbeffutil/**</sonar.coverage.exclusions>
 		<sonar.cpd.exclusions>**/dto/**,**/entity/**,**/config/**</sonar.cpd.exclusions>
