--- a/pre-registration/pre-registration-demographic-service/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-demographic-service/src/test/resources/application.properties
@@ -1,14 +1,18 @@
-javax.persistence.jdbc.driver=org.postgresql.Driver
-javax.persistence.jdbc.url=jdbc:postgresql://52.172.54.231:9001/mosip_prereg
-javax.persistence.jdbc.user=prereguser
-javax.persistence.jdbc.password=Mosip@dev123
+javax.persistence.jdbc.driver=org.h2.Driver
+javax.persistence.jdbc.url=jdbc:h2\:mem\:testdb;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'classpath:create-schema.sql'
+javax.persistence.jdbc.user=sa
+javax.persistence.jdbc.password=
 
 cancel.appoinment.template=cancel-appointment
-#Hibernate properties
 hibernate.hbm2ddl.auto=update
-hibernate.show_sql=true
-hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-hibernate.jdbc.lob.non_contextual_creation=true
+hibernate.dialect=org.hibernate.dialect.H2Dialect
+hibernate.show_sql=false
+hibernate.format_sql=false
+hibernate.connection.charSet=utf8
+hibernate.cache.use_second_level_cache=false
+hibernate.cache.use_query_cache=false
+hibernate.cache.use_structured_entries=false
+hibernate.generate_statistics=false
 
 #swagger.base-url=http://localhost
 server.servlet.context-path=/preregistration/v1
