--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -259,3 +259,6 @@ mosip.admin.packetstatus.api=https://dev.mosip.io/registrationprocessor/v1/regis
 mosip.admin.packetstatus.api.version=1.0
 mosip.admin.packetstatus.api.statuscode=PROCESSING
 mosip.admin.packetstatus.api.packetId=mosip.registration.status
+mosip.kernel.packet-status-update-url=https://qa.mosip.io/registrationprocessor/v1/registrationtransaction/search
+mosip.kernel.zone-validation-url=http://localhost:8086/v1/masterdata/zones/authorize
+mosip.kernel.registrationcenterid.length=5
