--- a/admin/admin-service/src/test/resources/bootstrap.properties
+++ b/admin/admin-service/src/test/resources/bootstrap.properties
@@ -11,7 +11,7 @@ management.endpoints.web.exposure.include=refresh
 #management.security.enabled=false
 
 server.port=8098
-server.servlet.path=/v1/admin
+server.servlet.path=/r2/v1/admin
 
 #disabling health check so that client doesnt try to load properties from sprint config server every
 # 5 minutes (should not be done in production)
