--- a/kernel/kernel-vidgenerator-service/src/main/resources/application-local.properties
+++ b/kernel/kernel-vidgenerator-service/src/main/resources/application-local.properties
@@ -107,5 +107,6 @@ kernel.vid.revoke-scheduler-months=*
 kernel.vid.revoke-scheduler-days_of_week=*
 
 
-
+server.port=8080
+server.servlet.path=/v1/pridgenerator
 
