--- a/pre-registration/pre-registration-notification-service/pom.xml
+++ b/pre-registration/pre-registration-notification-service/pom.xml
@@ -28,7 +28,7 @@
 			<groupId>io.mosip.preregistration</groupId>
 			<artifactId>pre-registration-core</artifactId>
 			<version>${project.version}</version>
-			<exclusions>
+			  <exclusions>
 				<exclusion>
 					<groupId>org.hibernate</groupId>
 					<artifactId>hibernate-core</artifactId>
@@ -37,7 +37,7 @@
 					<groupId>io.mosip.kernel</groupId>
 					<artifactId>kernel-dataaccess-hibernate</artifactId>
 				</exclusion>
-			</exclusions>
+			</exclusions> 
 		</dependency>
 		<dependency>
 			<groupId>org.json</groupId>
@@ -65,7 +65,6 @@
 			<artifactId>kernel-qrcodegenerator-zxing</artifactId>
 			<version>${kernel.core.version}</version>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -92,6 +91,28 @@
 			<version>${spring.version}</version>
 			<scope>test</scope>
 		</dependency> 
+		<dependency>
+			<groupId>io.mosip.preregistration</groupId>
+			<artifactId>pre-registration-demographic-service-impl</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.mosip.kernel</groupId>
+			<artifactId>kernel-idgenerator-prid</artifactId>
+			<version>${kernel.core.version}</version>
+		</dependency>
+		 <dependency>
+			<groupId>dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+			<version>1.6.1</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>antlr</groupId>
+		    <artifactId>antlr</artifactId>
+		    <version>2.7.7</version>
+		</dependency> 
+		
 	</dependencies>
 	<build>
 		<plugins>
