--- a/authentication/authentication-common/src/test/resources/application.properties
+++ b/authentication/authentication-common/src/test/resources/application.properties
@@ -364,3 +364,19 @@ ida.demo.common.normalization.regex.any[0]=[\\.|,|\\-|\\*|\\(|\\)|\\[|\\]|`|\\'|
 # Trailing space is removed from property. As a workaround first replacing with " ." then removing the "."
 ida.demo.common.normalization.regex.any[1]=\\s+${ida.norm.sep} .
 ida.demo.common.normalization.regex.any[2]=\\.${ida.norm.sep}
+
+
+ida.api.version.auth=1.0
+
+# Request timeout used across all REST API calls in IDA
+mosip.ida.request.timeout.secs=10
+# Common JSON media type used across all REST API calls in IDA
+mosip.ida.request.mediaType=application/json
+
+mosip.base.url=http://dummyurl
+
+# Encryption Service
+encrypt-service.rest.uri=${mosip.base.url}/v1/cryptomanager/encrypt
+encrypt-service.rest.httpMethod=POST
+encrypt-service.rest.headers.mediaType=${mosip.ida.request.mediaType}
+encrypt-service.rest.timeout=${mosip.ida.request.timeout.secs}
