--- a/resident/resident-service/pom.xml
+++ b/resident/resident-service/pom.xml
@@ -56,6 +56,11 @@
 			<version>${postgresql.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>${googlecode.json-simple.version}</version>
+		</dependency>		
+		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-logger-logback</artifactId>
 			<version>${project.version}</version>
