--- a/kernel/kernel-masterdata-service/src/main/resources/application-local.properties
+++ b/kernel/kernel-masterdata-service/src/main/resources/application-local.properties
@@ -18,7 +18,7 @@ hibernate.generate_statistics=false
 #hibernate.ejb.interceptor=io.mosip.kernel.masterdata.config.MasterDataInterceptor
 
 #auth.server.validate.url=https://qa.mosip.io/v1/authmanager/authorize/validateToken 
-mosip.kernel.masterdata.audit-url=https://qa.mosip.io/v1/auditmanager/audits
+mosip.kernel.masterdata.audit-url=https://dev.mosip.io/v1/auditmanager/audits
 mosip.kernel.packet-status-update-url=https://dev.mosip.io/registrationprocessor/v1/registrationstatus/search
 
 mosip.kernel.registrationcenterid.length=5
