--- a/kernel/kernel-pridgenerator-service/src/main/resources/application-local.properties
+++ b/kernel/kernel-pridgenerator-service/src/main/resources/application-local.properties
@@ -69,9 +69,9 @@ mosip.kernel.signature.signature-version-id=v1.0
 #-------------------------------------------------------------
 
 #minimum threshold of unused prid
-mosip.kernel.prid.min-unused-threshold=50000
+mosip.kernel.prid.min-unused-threshold=500
 #number of prids to generate
-mosip.kernel.prid.prids-to-generate=100000
+mosip.kernel.prid.prids-to-generate=1000
 #time to renew after expiry(in days)
 mosip.kernel.prid.time-to-renew-after-expiry=5
 #for genaration on init prids timeout 
